# CredSweeper

./: .coveragerc  .flake8  .gitignore  .mypy.ini  .pkcs.sh  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  .readthedocs.yml  .style.yapf  Dockerfile  LICENSE  README.md  SECURITY.md  abc.py  action.yml  entrypoint.sh  fuzz_credsweeper.py  git  git.bat  github-windows-py3_12.patch  google_multi.bak  nz.py  pre-commit  pyproject.toml  pytest.ini  redump.py  requirements.txt  setup.cfg  setup.py  staackoverflow.txt
.ci/: README.md  benchmark.txt
.clusterfuzzlite/: Dockerfile  build.sh  fuzz_credsweeper.sh  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull-request-template.md
.github/workflows/: action.yml  benchmark.yml  cflite_pr.yml  check.yml  codeql-analysis.yml  codeql.yml  fuzz.yml  pypi.yml  python-package.yml  rottenness.yml  test.yml  vcs.yml  winbin.yml
cicd/: README.md  benchmark.txt  git_workflow.sh  missed_docstrings.txt  mypy_warnings.txt
corpus/: api  dynatrace_api  google_oauth_key  password.patch  password_utf16.patch  paypal_key  sendgrid_api_key  shopify_token  twilio_key
credsweeper/: __init__.py  __main__.py  app.py  app_path.py  cli.py  main.py
credsweeper/common/: __init__.py  constants.py  keyword_checklist.py  keyword_checklist.txt  keyword_pattern.py  morpheme_checklist.txt
credsweeper/config/: __init__.py  config.py  config_manager.py  default_config.py
credsweeper/credentials/: __init__.py  augment_candidates.py  candidate.py  candidate_group_generator.py  candidate_key.py  credential_manager.py  line_data.py
credsweeper/deep_scanner/: __init__.py  abstract_scanner.py  byte_scanner.py  bzip2_scanner.py  cpio_scanner.py  crx_scanner.py  csv_scanner.py  deb_scanner.py  deep_scaner.py  deep_scanner.py  dex_scanner.py  docx_scanner.py  eml_scanner.py  encoder_scanner.py  grit_scanner.py  gzip_scanner.py  html_scanner.py  jclass_scanner.py  jks_scanner.py  lang_scanner.py  lzma_scanner.py  mxfile_scanner.py  ods_scanner.py  pandas_scanner.py  patch_scanner.py  pdf_scanner.py  pickle_scanner.py  pkcs12_scanner.py  pkcs_scanner.py  plist_scanner.py  png_scanner.py  pptx_scanner.py  protobuf_scanner.py  pycache_scanner.py  rpm_scanner.py  rtf_scanner.py  snk_scanner.py  sqlite3_scanner.py  squashfs_scanner.py  strings_scanner.py  (+8 more)
credsweeper/file_handler/: __init__.py  abstract_provider.py  analysis_target.py  byte_content_provider.py  content_provider.py  data_content_provider.py  descriptor.py  diff_content_provider.py  file_path_extractor.py  files_provider.py  patch_provider.py  patches_provider.py  string_content_provider.py  struct_content_provider.py  text_content_provider.py  text_provider.py
credsweeper/filters/: __init__.py  cred_card_number_check.py  filter.py  line_git_binary_check.py  line_specific_key_check.py  line_uue_part_check.py  separator_unusual_check.py  value_allowlist_check.py  value_array_dictionary_check.py  value_ascii_check.py  value_atlassian_token_check.py  value_azure_token_check.py  value_base32_data_check.py  value_base64_data_check.py  value_base64_encoded_pem_check.py  value_base64_key_check.py  value_base64_part_check.py  value_basic_auth_check.py  value_blocklist_check.py  value_camel_case_check.py  value_card_number_check.py  value_couple_keyword_check.py  value_dictionary_keyword_check.py  value_dictionary_value_length_check.py  value_discord_bot_check.py  value_entropy_base32_check.py  value_entropy_base36_check.py  value_entropy_base64_check.py  value_entropy_base_check.py  value_entropy_check.py  value_file_path_check.py  value_first_word_check.py  value_github_check.py  value_grafana_check.py  value_grafana_service_check.py  value_hex_number_check.py  value_iban_check.py  value_ip_check.py  value_jfrog_token_check.py  value_json_web_key_check.py  (+36 more)
credsweeper/logger/: __init__.py  log_config.py  logger.py
credsweeper/ml_model/: __init__.py  char_set.py  char_to_index.pkl  features.py  file_extension.py  hartley_entropy.py  memory_monitor.py  ml_config.json  ml_config.py  ml_model.h5  ml_model.onnx  ml_model.onnx.md5  ml_model.py  ml_validator.py  model_config.json  reny_entropy.py  requirements.txt  rule_name.py  shannon_entropy.py  (+10 more)
doc/: overall_architecture.md
docs/: Makefile  README.md  requirements.txt
experiment/: README.md  __init__.py  benchmark.txt  data_loader.py  evaluate_model.py  features.py  hyperparameters.py  log_callback.py  main.py  main.sh  ml_model.py  model_config_preprocess.py  plot.py  prepare_data.py  requirements.txt  split.py  toxic.py  train.py
fuzz/: README.md  __main__.py  auxilary.py  coveraging.sh  fuzzing.sh  minimizing.sh  re-fuzzing.sh  reducing.sh  requirements.txt
tests/: README.md  __init__.py  conftest.py  git.bat  pytest.ini  test_app.py  test_cli.py  test_doc.py  test_git.py  test_int.py  test_log.py  test_log.yaml  test_main.py  test_memory_limits.py
(+631 files in other folders)
