[project]
name = "credsweeper"
dynamic = ["version"]
description = "Credential Sweeper"
authors = [
]
dependencies = [
    "base58",
    "beautifulsoup4>=4.11.0",
    "cryptography",
    "GitPython",
    "google_auth_oauthlib",
    "humanfriendly",
    "lxml==4.9.4; platform_system == 'Darwin' and python_version<'3.9'",
    "lxml; platform_system != 'Darwin'",
    "numpy<2.0.0",
    "oauthlib",
    "onnxruntime",
    "openpyxl",
    "pandas",
    "password-strength",
    "pdfminer.six",
    "pybase62",
    "pyjks",
    "python-dateutil",
    "python-docx",
    "PyYAML",
    "requests",
    "scipy",
    "typing_extensions",
    "whatthepatch",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/Samsung/CredSweeper"
"Bug Tracker" = "https://github.com/Samsung/CredSweeper/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "credsweeper/__init__.py"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
only-include = ["/credsweeper"]

[project.scripts]
credsweeper = "credsweeper.__main__:main"
