[project]
name = "credsweeper"
dynamic = ["version"]
description = "Credential Sweeper"
authors = [
]
dependencies = [
    "base58",
    "beautifulsoup4>=4.11.0",
    "colorama",
    "cryptography",
    "GitPython",
    "humanfriendly",
    "lxml",
    "numpy",
    "odfpy",
    "onnxruntime==1.19.2; platform_system == 'Windows' and python_version == '3.12'",  # ONNX limitation
    "onnxruntime; platform_system != 'Windows' or python_version != '3.12'",
    "openpyxl",
    "pandas",
    "pdfminer.six",
    "pybase62",
    "pyjks",
    "python-dateutil",
    "python-docx",
    "python-pptx",
    "PyYAML",
    "rpmfile",
    "striprtf",
    "whatthepatch",
    "xlrd",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/Samsung/CredSweeper"
"Bug Tracker" = "https://github.com/Samsung/CredSweeper/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "credsweeper/__init__.py"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
only-include = ["/credsweeper"]

[project.scripts]
credsweeper = "credsweeper.__main__:main"
